--- a/index.html
+++ b/index.html
@@ -1,27 +1,27 @@
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Alkasthe Nail Bar | Premium Nail Salon</title>
-    <meta name="description" content="Premium nail salon offering high-quality services in a relaxing environment" />
-    <meta name="author" content="Alkasthe" />
 
-    <meta property="og:title" content="Alkasthe Nail Bar | Premium Nail Salon" />
-    <meta property="og:description" content="Premium nail salon offering high-quality services in a relaxing environment" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>NailShadeZ | Premium Nail Salon</title>
+  <meta name="description" content="Premium nail salon offering high-quality services in a relaxing environment" />
+  <meta name="author" content="NailShadeZ" />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@alkasthenailbar" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-  </head>
+  <meta property="og:title" content="NailShadeZ | Premium Nail Salon" />
+  <meta property="og:description"
+    content="Premium nail salon offering high-quality services in a relaxing environment" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-  <body>
-    <div id="root"></div>
-    <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
-    <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:site" content="@NailShadeZ" />
+  <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
